Separate app.js and genetic.js

--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
             </div>
 
             <div class="performer-row">
+                <div id="top-performer0" class="top-performer"></div>
+                <span id="score0" class="score"></span>
+            </div>
+            <div class="performer-row">
                 <div id="top-performer1" class="top-performer"></div>
                 <span id="score1" class="score"></span>
             </div>
@@ -132,14 +136,11 @@
                 <div id="top-performer9" class="top-performer"></div>
                 <span id="score9" class="score"></span>
             </div>
-            <div class="performer-row">
-                <div id="top-performer10" class="top-performer"></div>
-                <span id="score10" class="score"></span>
-            </div>
         </div>
 
     </div>
     <script type="text/javascript" src="./app.js"></script>
+    <script type="text/javascript" src="./genetic.js"></script>
     <script type="text/javascript" src="./score.js"></script>
     <script type="text/javascript" src="./features.js"></script>
     <script type="text/javascript" src="./ipa.js"></script>
