Use object for FeatureSchema, Alphabet and GeneticRun

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
             <div class="parameter">
                 parents per child
-                <input type="number" id="sex-number" />
+                <input type="number" id="parent-per-child" />
             </div>
             <div class="parameter">
                 population size
