Add scorer util class

--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
     </div>
     <script type="text/javascript" src="./app.js"></script>
     <script type="text/javascript" src="./genetic.js"></script>
-    <script type="text/javascript" src="./score.js"></script>
+    <script type="text/javascript" src="./distance.js"></script>
+    <script type="text/javascript" src="./scorer.js"></script>
     <script type="text/javascript" src="./features.js"></script>
     <script type="text/javascript" src="./ipa.js"></script>
     <script type="text/javascript" src="./katakana.js"></script>
