Prepare architecture to pct-features

--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
     <script type="text/javascript" src="./genetic.js"></script>
     <script type="text/javascript" src="./distance.js"></script>
     <script type="text/javascript" src="./scorer.js"></script>
-    <script type="text/javascript" src="./features.js"></script>
+    <script type="text/javascript" src="./feature/poc-feature-schema.js"></script>
     <script type="text/javascript" src="./ipa.js"></script>
-    <script type="text/javascript" src="./katakana.js"></script>
+    <script type="text/javascript" src="./alphabet/katakana.js"></script>
 </body>
 
 </html>
