Add PCT feature, Factory for Katakana, Use 'class' .

--- a/index.html
+++ b/index.html
@@ -144,8 +144,10 @@
     <script type="text/javascript" src="./distance.js"></script>
     <script type="text/javascript" src="./scorer.js"></script>
     <script type="text/javascript" src="./feature/poc-feature-schema.js"></script>
+    <script type="text/javascript" src="./feature/pct-feature-schema.js"></script>
     <script type="text/javascript" src="./ipa.js"></script>
-    <script type="text/javascript" src="./alphabet/katakana.js"></script>
+    <script type="text/javascript" src="./alphabet/katakana-alphabet.js"></script>
+    <script type="text/javascript" src="./alphabet/katakana-factory.js"></script>
 </body>
 
 </html>
