--- a/index.html
+++ b/index.html
@@ -139,7 +139,9 @@
         </div>
 
     </div>
-    <script type="text/javascript" src="./app.js"></script>
+    <script type="text/javascript" src="./index.js"></script>
+    <script type="text/javascript" src="./app-controller.js"></script>
+    <script type="text/javascript" src="./app-model.js"></script>
     <script type="text/javascript" src="./json-loader.js"></script>
     <script type="text/javascript" src="./genetic/genetic-run.js"></script>
     <script type="text/javascript" src="./genetic/ipa.js"></script>
