--- a/index.html
+++ b/index.html
@@ -142,6 +142,8 @@
     <script type="text/javascript" src="./index.js"></script>
     <script type="text/javascript" src="./app-controller.js"></script>
     <script type="text/javascript" src="./app-model.js"></script>
+    <script type="text/javascript" src="./parameter-controller.js"></script>
+    <script type="text/javascript" src="./parameter-model.js"></script>
     <script type="text/javascript" src="./json-loader.js"></script>
     <script type="text/javascript" src="./genetic/genetic-run.js"></script>
     <script type="text/javascript" src="./genetic/ipa.js"></script>
