Improve 'IPA normalize' and add tiny test

--- a/src/main/index.html
+++ b/src/main/index.html
@@ -146,7 +146,6 @@
     <script type="text/javascript" src="./parameter-model.js"></script>
     <script type="text/javascript" src="./json-loader.js"></script>
     <script type="text/javascript" src="./genetic/genetic-run.js"></script>
-    <script type="text/javascript" src="./genetic/ipa.js"></script>
     <script type="text/javascript" src="./genetic/levenshtein.js"></script>
     <script type="text/javascript" src="./genetic/scorer.js"></script>
     <script type="text/javascript" src="./genetic/generator.js"></script>
@@ -158,6 +157,7 @@
     <script type="text/javascript" src="./feature/pct/pct-feature-comparator.js"></script>
     <script type="text/javascript" src="./feature/pct/pct-feature-factory.js"></script>
     <script type="text/javascript" src="./feature/pct/pct-feature-set.js"></script>
+    <script type="text/javascript" src="./alphabet/ipa.js"></script>
     <script type="text/javascript" src="./alphabet/katakana-alphabet.js"></script>
     <script type="text/javascript" src="./alphabet/katakana-factory.js"></script>
 </body>
