IPA parsing manage ligature (affricate, ...)

--- a/src/test/test.html
+++ b/src/test/test.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <div id="ipa">
+    <div id="result">
         <script type="text/javascript" src="./ipa.test.js"></script>
         <script type="text/javascript" src="../main/alphabet/ipa.js"></script>
     </div>
