Improve Katana data and begin documentation

--- a/src/main/index.html
+++ b/src/main/index.html
@@ -145,6 +145,7 @@
     <script type="text/javascript" src="./parameter-controller.js"></script>
     <script type="text/javascript" src="./parameter-model.js"></script>
     <script type="text/javascript" src="./json-loader.js"></script>
+    <script type="text/javascript" src="./util.js"></script>
     <script type="text/javascript" src="./genetic/genetic-run.js"></script>
     <script type="text/javascript" src="./genetic/levenshtein.js"></script>
     <script type="text/javascript" src="./genetic/scorer.js"></script>
@@ -160,6 +161,7 @@
     <script type="text/javascript" src="./alphabet/ipa.js"></script>
     <script type="text/javascript" src="./alphabet/japanese/katakana-alphabet.js"></script>
     <script type="text/javascript" src="./alphabet/japanese/katakana-factory.js"></script>
+    <script type="text/javascript" src="./alphabet/japanese/katakana-helper.js"></script>
 </body>
 
 </html>
