Reorganise, clean, add documentation

--- a/src/main/index.html
+++ b/src/main/index.html
@@ -137,31 +137,37 @@
                 <span id="score9" class="score"></span>
             </div>
         </div>
-
     </div>
+
     <script type="text/javascript" src="./index.js"></script>
     <script type="text/javascript" src="./app-controller.js"></script>
     <script type="text/javascript" src="./app-model.js"></script>
     <script type="text/javascript" src="./parameter-controller.js"></script>
     <script type="text/javascript" src="./parameter-model.js"></script>
-    <script type="text/javascript" src="./json-loader.js"></script>
-    <script type="text/javascript" src="./util.js"></script>
-    <script type="text/javascript" src="./genetic/genetic-run.js"></script>
-    <script type="text/javascript" src="./genetic/levenshtein.js"></script>
-    <script type="text/javascript" src="./genetic/scorer.js"></script>
-    <script type="text/javascript" src="./genetic/generator.js"></script>
-    <script type="text/javascript" src="./feature/abstract-feature-comparator.js"></script>
-    <script type="text/javascript" src="./feature/abstract-feature-set.js"></script>
-    <script type="text/javascript" src="./feature/poc/poc-feature-comparator.js"></script>
-    <script type="text/javascript" src="./feature/poc/poc-feature-factory.js"></script>
-    <script type="text/javascript" src="./feature/poc/poc-feature-set.js"></script>
-    <script type="text/javascript" src="./feature/pct/pct-feature-comparator.js"></script>
-    <script type="text/javascript" src="./feature/pct/pct-feature-factory.js"></script>
-    <script type="text/javascript" src="./feature/pct/pct-feature-set.js"></script>
-    <script type="text/javascript" src="./alphabet/ipa.js"></script>
+
     <script type="text/javascript" src="./alphabet/japanese/katakana-alphabet.js"></script>
     <script type="text/javascript" src="./alphabet/japanese/katakana-factory.js"></script>
     <script type="text/javascript" src="./alphabet/japanese/katakana-helper.js"></script>
+
+    <script type="text/javascript" src="./distance/levenshtein.js"></script>
+    <script type="text/javascript" src="./distance/scorer.js"></script>
+    <script type="text/javascript" src="./distance/ipa.js"></script>
+    <script type="text/javascript" src="./distance/ipa-phoneme.js"></script>
+    <script type="text/javascript" src="./distance/abstract-feature-comparator.js"></script>
+    <script type="text/javascript" src="./distance/abstract-feature-set.js"></script>
+    <script type="text/javascript" src="./distance/poc/poc-feature-comparator.js"></script>
+    <script type="text/javascript" src="./distance/poc/poc-feature-factory.js"></script>
+    <script type="text/javascript" src="./distance/poc/poc-feature-set.js"></script>
+    <script type="text/javascript" src="./distance/pct/pct-feature-comparator.js"></script>
+    <script type="text/javascript" src="./distance/pct/pct-feature-factory.js"></script>
+    <script type="text/javascript" src="./distance/pct/pct-feature-set.js"></script>
+
+    <script type="text/javascript" src="./genetic/genetic-run.js"></script>
+    <script type="text/javascript" src="./genetic/generator.js"></script>
+
+    <script type="text/javascript" src="./util/json-loader.js"></script>
+    <script type="text/javascript" src="./util/random.js"></script>
+
 </body>
 
 </html>
