--- a/src/main/index.html
+++ b/src/main/index.html
@@ -164,6 +164,7 @@
 
     <script type="text/javascript" src="./genetic/genetic-run.js"></script>
     <script type="text/javascript" src="./genetic/generator.js"></script>
+    <script type="text/javascript" src="./genetic/population.js"></script>
 
     <script type="text/javascript" src="./util/json-loader.js"></script>
     <script type="text/javascript" src="./util/random.js"></script>
