Add (but ignore) IPA diacritic

--- a/src/main/index.html
+++ b/src/main/index.html
@@ -151,8 +151,6 @@
 
     <script type="text/javascript" src="./distance/levenshtein.js"></script>
     <script type="text/javascript" src="./distance/scorer.js"></script>
-    <script type="text/javascript" src="./distance/ipa.js"></script>
-    <script type="text/javascript" src="./distance/ipa-phoneme.js"></script>
     <script type="text/javascript" src="./distance/abstract-feature-comparator.js"></script>
     <script type="text/javascript" src="./distance/abstract-feature-set.js"></script>
     <script type="text/javascript" src="./distance/poc/poc-feature-comparator.js"></script>
@@ -165,6 +163,9 @@
     <script type="text/javascript" src="./genetic/genetic-run.js"></script>
     <script type="text/javascript" src="./genetic/generator.js"></script>
     <script type="text/javascript" src="./genetic/population.js"></script>
+
+    <script type="text/javascript" src="./ipa/ipa.js"></script>
+    <script type="text/javascript" src="./ipa/ipa-phoneme.js"></script>
 
     <script type="text/javascript" src="./util/json-loader.js"></script>
     <script type="text/javascript" src="./util/random.js"></script>
