Add stop button

--- a/src/main/index.html
+++ b/src/main/index.html
@@ -67,6 +67,7 @@
                     <select id="select-alphabet"></select>
                     <select id="select-distance"></select>
                     <button id="start-evolve">Evolve Me</button>
+                    <button id="stop-evolve">Stop</button>
                 </div>
             </div>
             <div class="parameter">
