Add Inuktitut alphabet

--- a/src/main/index.html
+++ b/src/main/index.html
@@ -149,6 +149,9 @@
     <script type="text/javascript" src="./parameter-model.js"></script>
 
     <script type="text/javascript" src="./alphabet/alphabet-provider.js"></script>
+    <script type="text/javascript" src="./alphabet/phenotype.js"></script>
+    <script type="text/javascript" src="./alphabet/inuktitut/inuktitut-alphabet.js"></script>
+    <script type="text/javascript" src="./alphabet/inuktitut/inuktitut-factory.js"></script>
     <script type="text/javascript" src="./alphabet/japanese/katakana-alphabet.js"></script>
     <script type="text/javascript" src="./alphabet/japanese/katakana-factory.js"></script>
     <script type="text/javascript" src="./alphabet/japanese/katakana-helper.js"></script>
