--- a/src/main/index.html
+++ b/src/main/index.html
@@ -54,7 +54,6 @@
     <script type="text/javascript" src="./gui/app-controller.js"></script>
     <script type="text/javascript" src="./gui/app-model.js"></script>
     <script type="text/javascript" src="./gui/parameter-controller.js"></script>
-    <script type="text/javascript" src="./gui/parameter-model.js"></script>
     <script type="text/javascript" src="./gui/keyboard/keyboard-controller.js"></script>
     <script type="text/javascript" src="./gui/performers/performers-controller.js"></script>
 
@@ -81,6 +80,7 @@
     <script type="text/javascript" src="./core/genetic/genetic-run.js"></script>
     <script type="text/javascript" src="./core/genetic/generator.js"></script>
     <script type="text/javascript" src="./core/genetic/population.js"></script>
+    <script type="text/javascript" src="./core/genetic/parameter-model.js"></script>
 
     <script type="text/javascript" src="./core/ipa/ipa.js"></script>
     <script type="text/javascript" src="./core/ipa/ipa-phoneme.js"></script>
