--- a/src/main/index.html
+++ b/src/main/index.html
@@ -5,55 +5,19 @@
     <meta charset="utf-8">
     <title>Thot - Transcriptor</title>
     <link rel="stylesheet" type="text/css" href="gui/styles.css">
+    <link rel="stylesheet" type="text/css" href="gui/parameters/parameters.css">
     <link rel="stylesheet" type="text/css" href="gui/performers/performers.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Caveat+Brush|Droid+Sans">
 </head>
 
 <body>
-    <div class="container">
-
-        <div id="keyboard"></div>
-        <div class="top-bar">
-            <div class="input__container">
-                <h2>Your name</h2>
-                <div class="name-input">
-                    <input type="text" id="textBox" />
-                    <select id="select-alphabet"></select>
-                    <select id="select-distance"></select>
-                    <button id="start-evolve">Evolve Me</button>
-                    <button id="stop-evolve">Stop</button>
-                </div>
-            </div>
-            <div class="parameter">
-                mutation rate
-                <input type="number" id="mutation-rate" />
-            </div>
-            <div class="parameter">
-                parents per child
-                <input type="number" id="parent-per-child" />
-            </div>
-            <div class="parameter">
-                population size
-                <input type="number" id="pop-size" />
-            </div>
-            <div class="parameter">
-                selection bias
-                <input type="number" id="selection-bias" />
-            </div>
-            <div class="parameter">
-                elites
-                <input type="number" id="elites" />
-            </div>
-        </div>
-
-        <div class="top-performers" id="performers"></div>
-    </div>
+    <div class="container"></div>
 
     <script type="text/javascript" src="./index.js"></script>
 
     <script type="text/javascript" src="./gui/app-controller.js"></script>
     <script type="text/javascript" src="./gui/app-model.js"></script>
-    <script type="text/javascript" src="./gui/parameter-controller.js"></script>
+    <script type="text/javascript" src="./gui/parameters/parameters-controller.js"></script>
     <script type="text/javascript" src="./gui/keyboard/keyboard-controller.js"></script>
     <script type="text/javascript" src="./gui/performers/performers-controller.js"></script>
 
