Refactor IPA parsing

--- a/src/main/index.html
+++ b/src/main/index.html
@@ -47,6 +47,9 @@
     <script type="text/javascript" src="./core/genetic/parameter-model.js"></script>
 
     <script type="text/javascript" src="./core/ipa/ipa.js"></script>
+    <script type="text/javascript" src="./core/ipa/ipa-data-commented.js"></script>
+    <script type="text/javascript" src="./core/ipa/ipa-parser.js"></script>
+    <script type="text/javascript" src="./core/ipa/ipa-parser-factory.js"></script>
     <script type="text/javascript" src="./core/ipa/ipa-phoneme.js"></script>
 
     <script type="text/javascript" src="./util/json-loader.js"></script>
