--- a/src/main/index.html
+++ b/src/main/index.html
@@ -50,6 +50,8 @@
     <script type="text/javascript" src="./core/ipa/ipa-parser.js"></script>
     <script type="text/javascript" src="./core/ipa/ipa-parser-factory.js"></script>
     <script type="text/javascript" src="./core/ipa/ipa-phoneme.js"></script>
+    <script type="text/javascript" src="./core/ipa/ipa-transcription-builder.js"></script>
+    <script type="text/javascript" src="./core/ipa/ipa-symbol.js"></script>
 
     <script type="text/javascript" src="./util/json-loader.js"></script>
     <script type="text/javascript" src="./util/random.js"></script>
