--- a/src/main/index.html
+++ b/src/main/index.html
@@ -49,11 +49,13 @@
     <script type="text/javascript" src="./core/ipa/ipa.js"></script>
     <script type="text/javascript" src="./core/ipa/ipa-parser.js"></script>
     <script type="text/javascript" src="./core/ipa/ipa-parser-factory.js"></script>
-    <script type="text/javascript" src="./core/ipa/ipa-phoneme.js"></script>
-    <script type="text/javascript" src="./core/ipa/ipa-quantity.js"></script>
     <script type="text/javascript" src="./core/ipa/ipa-transcription-builder.js"></script>
     <script type="text/javascript" src="./core/ipa/ipa-symbol.js"></script>
-
+    <script type="text/javascript" src="./core/ipa/phoneme/abstract-phoneme.js"></script>
+    <script type="text/javascript" src="./core/ipa/phoneme/consonant-phoneme.js"></script>
+    <script type="text/javascript" src="./core/ipa/phoneme/ipa-quantity.js"></script>
+    <script type="text/javascript" src="./core/ipa/phoneme/vowel-phoneme.js"></script>
+     
     <script type="text/javascript" src="./util/json-loader.js"></script>
     <script type="text/javascript" src="./util/random.js"></script>
 
