--- a/src/main/index.html
+++ b/src/main/index.html
@@ -4,61 +4,17 @@
 <head>
     <meta charset="utf-8">
     <title>Thot - Transcriptor</title>
-    <link rel="stylesheet" type="text/css" href="gui/styles.css">
-    <link rel="stylesheet" type="text/css" href="gui/parameters/parameters.css">
-    <link rel="stylesheet" type="text/css" href="gui/performers/performers.css">
+    <!-- inject:css -->
+    <!-- endinject -->
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Caveat+Brush|Droid+Sans">
 </head>
 
 <body>
+    <!-- inject:js -->
+    <!-- endinject -->
+
     <div class="container"></div>
-
-    <script type="text/javascript" src="./index.js"></script>
-
-    <script type="text/javascript" src="./gui/app-controller.js"></script>
-    <script type="text/javascript" src="./gui/app-model.js"></script>
-    <script type="text/javascript" src="./gui/parameters/parameters-controller.js"></script>
-    <script type="text/javascript" src="./gui/keyboard/keyboard-controller.js"></script>
-    <script type="text/javascript" src="./gui/performers/performers-controller.js"></script>
-
-    <script type="text/javascript" src="./core/alphabet/alphabet-provider.js"></script>
-    <script type="text/javascript" src="./core/alphabet/phenotype.js"></script>
-    <script type="text/javascript" src="./core/alphabet/inuktitut/inuktitut-alphabet.js"></script>
-    <script type="text/javascript" src="./core/alphabet/inuktitut/inuktitut-factory.js"></script>
-    <script type="text/javascript" src="./core/alphabet/japanese/katakana-alphabet.js"></script>
-    <script type="text/javascript" src="./core/alphabet/japanese/katakana-factory.js"></script>
-    <script type="text/javascript" src="./core/alphabet/japanese/katakana-helper.js"></script>
-
-    <script type="text/javascript" src="./core/distance/abstract-feature-comparator.js"></script>
-    <script type="text/javascript" src="./core/distance/abstract-feature-set.js"></script>
-    <script type="text/javascript" src="./core/distance/distance-provider.js"></script>
-    <script type="text/javascript" src="./core/distance/levenshtein.js"></script>
-    <script type="text/javascript" src="./core/distance/scorer.js"></script>
-    <script type="text/javascript" src="./core/distance/poc/poc-feature-comparator.js"></script>
-    <script type="text/javascript" src="./core/distance/poc/poc-feature-factory.js"></script>
-    <script type="text/javascript" src="./core/distance/poc/poc-feature-set.js"></script>
-    <script type="text/javascript" src="./core/distance/pct/pct-feature-comparator.js"></script>
-    <script type="text/javascript" src="./core/distance/pct/pct-feature-factory.js"></script>
-    <script type="text/javascript" src="./core/distance/pct/pct-feature-set.js"></script>
-
-    <script type="text/javascript" src="./core/genetic/genetic-run.js"></script>
-    <script type="text/javascript" src="./core/genetic/generator.js"></script>
-    <script type="text/javascript" src="./core/genetic/population.js"></script>
-    <script type="text/javascript" src="./core/genetic/parameter-model.js"></script>
-
-    <script type="text/javascript" src="./core/ipa/ipa.js"></script>
-    <script type="text/javascript" src="./core/ipa/ipa-parser.js"></script>
-    <script type="text/javascript" src="./core/ipa/ipa-parser-factory.js"></script>
-    <script type="text/javascript" src="./core/ipa/ipa-transcription-builder.js"></script>
-    <script type="text/javascript" src="./core/ipa/ipa-symbol.js"></script>
-    <script type="text/javascript" src="./core/ipa/phoneme/abstract-phoneme.js"></script>
-    <script type="text/javascript" src="./core/ipa/phoneme/consonant-phoneme.js"></script>
-    <script type="text/javascript" src="./core/ipa/phoneme/ipa-quantity.js"></script>
-    <script type="text/javascript" src="./core/ipa/phoneme/vowel-phoneme.js"></script>
-     
-    <script type="text/javascript" src="./util/json-loader.js"></script>
-    <script type="text/javascript" src="./util/random.js"></script>
-
 </body>
 
 </html>
