Refactoring : Simplify "Distance" classes

--- a/src/main/index.html
+++ b/src/main/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Thot - Transcriptor</title>
+    <title>Thot - test - v0.2.0.3</title>
     <!-- inject:css -->
     <!-- endinject -->
 
@@ -13,7 +13,6 @@
 <body>
     <!-- inject:js -->
     <!-- endinject -->
-
     <div class="container"></div>
 </body>
 
